Add files from 15.04.2021

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,5 +1,9 @@
 {
   "name": "javascript",
   "version": "1.0.0",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@azure/storage-blob": "^12.5.0",
+    "uuid": "^8.3.2"
+  }
 }
