--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: MojProjekt
+name: pulumi2
 runtime: nodejs
-description: A minimal Azure Native TypeScript Pulumi program
+description: A minimal TypeScript Pulumi program with the classic Azure provider
