--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-    "name": "MojProjekt",
+    "name": "pulumi2",
     "devDependencies": {
         "@types/node": "^10.0.0"
     },
     "dependencies": {
-        "@pulumi/azure-native": "^0.8.0",
-        "@pulumi/pulumi": "^2.0.0"
+        "@azure/storage-blob": "^12.5.0",
+        "@azure/storage-queue": "^12.4.0",
+        "@pulumi/azure": "^4.0.0",
+        "@pulumi/pulumi": "^3.0.0",
+        "azure-storage": "^2.10.3",
+        "uuid": "^3.4.0"
     }
 }
