--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@azure/storage-queue": "^12.4.0",
         "@pulumi/azure": "^4.0.0",
         "@pulumi/pulumi": "^3.0.0",
+        "@types/uuid": "^8.3.0",
         "azure-storage": "^2.10.3",
         "uuid": "^3.4.0"
     }
