--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
         "@types/node": "^10.0.0"
     },
     "dependencies": {
+        "@azure/cognitiveservices-computervision": "^8.0.0",
+        "@azure/ms-rest-azure-js": "^2.1.0",
         "@azure/storage-blob": "^12.5.0",
         "@azure/storage-queue": "^12.4.0",
         "@pulumi/azure": "^4.0.0",
